--- a/Facebook/Views/Album/Edit.cshtml
+++ b/Facebook/Views/Album/Edit.cshtml
@@ -1,37 +1,46 @@
 ﻿@model Facebook.Models.Album
+@Styles.Render("~/Content/Group.css")
 
 @{
     ViewBag.Title = "Edit";
 }
 
-@using (Html.BeginForm("Edit","Album",null,FormMethod.Post))
-{
-	@Html.HttpMethodOverride(HttpVerbs.Put)
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Album</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.albumID)
-		@Html.HiddenFor(model => model.userId)
+<div class="font-robo">
+    <div class="wrapper wrapper--w680">
+        <div class="card card-1">
+            <div class="card-body">
+                @using (Html.BeginForm("Edit", "Album", null, FormMethod.Post))
+                {
+                    @Html.HttpMethodOverride(HttpVerbs.Put)
+                    @Html.AntiForgeryToken()
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                    <div class="form-horizontal">
+                        <h4>Edit Album</h4>
+                        <hr />
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        @Html.HiddenFor(model => model.albumID)
+                        @Html.HiddenFor(model => model.userId)
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.name, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="col-md-offset-2 col-md-10">
+                                <input type="submit" value="Save" class="btn btn-success" />
+                            </div>
+                        </div>
+                    </div>
+                }
+
+                <div>
+                    @Html.ActionLink("Back to List", "Index")
+                </div>
             </div>
         </div>
     </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
 </div>
