--- a/Facebook/Views/Album/New.cshtml
+++ b/Facebook/Views/Album/New.cshtml
@@ -1,36 +1,43 @@
 ﻿@model Facebook.Models.Album
+@Styles.Render("~/Content/Group.css")
 
 @{
-	ViewBag.Title = "New";
+    ViewBag.Title = "New";
 }
 
-<h2>New</h2>
+<div class="font-robo">
+    <div class="wrapper wrapper--w680">
+        <div class="card card-1">
+            <div class="card-body">
+                @using (Html.BeginForm(actionName: "New", controllerName: "Album"))
+                {
+                    @Html.AntiForgeryToken()
+                    @Html.HiddenFor(m => m.userId)
 
-@using (Html.BeginForm(actionName: "New", controllerName: "Album"))
-{
-	@Html.AntiForgeryToken()
-	@Html.HiddenFor(m => m.userId)
+                    <div class="form-horizontal">
+                        <h4>New Album</h4>
+                        <hr />
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.name, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
 
-	<div class="form-horizontal">
-		<h4>Album</h4>
-		<hr />
-		@Html.ValidationSummary(true, "", new { @class = "text-danger" })
-		<div class="form-group">
-			@Html.LabelFor(model => model.name, htmlAttributes: new { @class = "control-label col-md-2" })
-			<div class="col-md-10">
-				@Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
-				@Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
-			</div>
-		</div>
+                        <div class="form-group">
+                            <div class="col-md-offset-2 col-md-10">
+                                <input type="submit" value="Create" class="btn btn-success" />
+                            </div>
+                        </div>
+                    </div>
+                }
 
-		<div class="form-group">
-			<div class="col-md-offset-2 col-md-10">
-				<input type="submit" value="Create" class="btn btn-default" />
-			</div>
-		</div>
-	</div>
-}
-
-<div>
-	@Html.ActionLink("Back to List","Index","Album", new { @id = Model.userId }, null)
+                <div>
+                    @Html.ActionLink("Back to List", "Index", "Album", new { @id = Model.userId }, null)
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
