--- a/Facebook/Views/Friends/ShowFriends.cshtml
+++ b/Facebook/Views/Friends/ShowFriends.cshtml
@@ -1,18 +1,33 @@
 ﻿@model IEnumerable<Facebook.Models.Profile>
+@Styles.Render("~/Content/SMallCSS.css")
 
 @{
     ViewBag.Title = "ShowFriends";
 }
-<ul>
-    @foreach(var profile in Model)
-    {
-    <li>
-		@Html.ActionLink(profile.name,"Show","Profile",new {@id=profile.userId },new {@class="strong" })
-        <p>@profile.about</p>
-        @if (ViewBag.loggedIn && (ViewBag.loggedInUser == ViewBag.ownsProfile))
-        {
-            @Html.ActionLink("Unfriend", "DeleteFriendRequest", "Friends", new { @requestBy = profile.userId, @requestTo = ViewBag.loggedInUser }, new { @class = "btn btn-success" })
-        }
-    </li>
-    }
-</ul>
+
+@foreach (var profile in Model)
+{
+    <div class="container wrap">
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-md-offset-3">
+                <div class="well well-sm">
+                    <div class="row">
+                        <div class="col-sm-4 col-md-6 col-lg-7">
+                            <img src=@profile.profileImageUrl alt="" class="img-rounded img-responsive" />
+                        </div>
+                        <div class="col-sm-8 col-md-6 col-lg-5">
+                            <h4>
+                                @Html.ActionLink(profile.name, "Show", "Profile", new { @id = profile.userId }, new { @class = "strong" })
+                            </h4>
+                            <p>@profile.about</p>
+                            @if (ViewBag.loggedIn && (ViewBag.loggedInUser == ViewBag.ownsProfile))
+                            {
+                                @Html.ActionLink("Unfriend", "DeleteFriendRequest", "Friends", new { @requestBy = profile.userId, @requestTo = ViewBag.loggedInUser }, new { @class = "btn btn-success" })
+                            }
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+}
