--- a/Facebook/Views/Group/Index.cshtml
+++ b/Facebook/Views/Group/Index.cshtml
@@ -1,27 +1,9 @@
 ﻿@model IEnumerable<Facebook.Models.Group>
+@Styles.Render("~/Content/SmallCSS.css")
 
 @{
     ViewBag.Title = "Index";
 }
-
-<style>
-    .wrap {
-        padding-top: 30px;
-    }
-
-    small {
-        display: block;
-        color: #888;
-    }
-
-    .well {
-        box-shadow: 2px 5px 4px;
-    }
-
-    body {
-        background-color: #377DE7;
-    }
-</style>
 
 <h2>My Groups</h2>
 <div class="container mt-4">
@@ -36,7 +18,7 @@
                 <div class="well well-sm">
                     <h3> @item.name </h3>
                     <br />
-                    @Html.ActionLink("Enter", "Show", "Group", new { @id = item.groupID }, new { @class = "btn btn-success" })                  
+                    @Html.ActionLink("Enter", "Show", "Group", new { @id = item.groupID }, new { @class = "btn btn-success" })
                 </div>
             </div>
         </div>
