--- a/Facebook/Views/Search/Search.cshtml
+++ b/Facebook/Views/Search/Search.cshtml
@@ -1,60 +1,38 @@
 ﻿@model IEnumerable<Facebook.Models.Search>
-
-<style>
-	.wrap {
-		padding-top: 30px;
-	}
-
-	.glyphicon {
-		
-		margin-right: 10px;
-	}
-
-	small {
-		display: block;
-		color: #888;
-	}
-
-	.well {
-		box-shadow: 2px 5px 4px;
-	}
-	body {
-		background-color: #377DE7;
-	}
-</style>
+@Styles.Render("~/Content/SMallCSS.css")
 
 @foreach (var searchResult in Model)
 {
-	<div class="container wrap">
-		<div class="row">
-			<div class="col-xs-12 col-sm-6 col-md-6 col-md-offset-3">
-				<div class="well well-sm">
-					<div class="row">
-						<div class="col-sm-4 col-md-6 col-lg-7">
-							<img src=@searchResult.profile.profileImageUrl alt="" class="img-rounded img-responsive" />
-						</div>
-						<div class="col-sm-8 col-md-6 col-lg-5">
-							<h4>
-								@Html.ActionLink(searchResult.profile.name,"Show","Profile",new {@id=searchResult.profile.userId},null)
-							</h4>
-							<small><cite title=@searchResult.profile.job> <i class="glyphicon glyphicon-map-marker"></i></cite></small>
-							<p>
-								<i class="glyphicon glyphicon-envelope"></i>@searchResult.profile.email
-								<br />
-								<i class="glyphicon glyphicon-globe"></i><a href=@searchResult.profile.web>@searchResult.profile.web</a>
-								<br />
-								<i class="glyphicon glyphicon-gift"></i>@searchResult.profile.about
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+    <div class="container wrap">
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-md-offset-3">
+                <div class="well well-sm">
+                    <div class="row">
+                        <div class="col-sm-4 col-md-6 col-lg-7">
+                            <img src=@searchResult.profile.profileImageUrl alt="" class="img-rounded img-responsive" />
+                        </div>
+                        <div class="col-sm-8 col-md-6 col-lg-5">
+                            <h4>
+                                @Html.ActionLink(searchResult.profile.name, "Show", "Profile", new { @id = searchResult.profile.userId }, null)
+                            </h4>
+                            <small><cite title=@searchResult.profile.job> <i class="glyphicon glyphicon-map-marker"></i></cite></small>
+                            <p>
+                                <i class="glyphicon glyphicon-envelope"></i>@searchResult.profile.email
+                                <br />
+                                <i class="glyphicon glyphicon-globe"></i><a href=@searchResult.profile.web>@searchResult.profile.web</a>
+                                <br />
+                                <i class="glyphicon glyphicon-gift"></i>@searchResult.profile.about
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 }
 
-@if(Model.Count()==0)
+@if (Model.Count() == 0)
 {
-	<h2 color="white">No results</h2>
-	<h3 color="white">Your search dosn't match any profile</h3>
+    <h2 color="white">No results</h2>
+    <h3 color="white">Your search dosn't match any profile</h3>
 }
