Modified Style, New Profile Inputs

--- a/Facebook/Content/Group.css
+++ b/Facebook/Content/Group.css
@@ -1,7 +1,7 @@
 ﻿/*Group style*/
 
 body {
-    background: #2c6ed5;
+    background: #B7ADCF;
 }
 /* ==========================================================================
    #FONT
@@ -93,7 +93,6 @@ input {
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
     box-shadow: none;
-    width: 100%;
     font-size: 14px;
     font-family: inherit;
 }
