--- a/Facebook/Views/Album/Index.cshtml
+++ b/Facebook/Views/Album/Index.cshtml
@@ -11,10 +11,10 @@
 		justify-content:center;
 		align-items: center;
 	}
-	
-	body {
-		background-color: #377DE7;
-	}
+
+    body {
+        background-color: #B7ADCF;
+    }
 
 	.btn-margin{
 		margin-left: 10px;
@@ -30,8 +30,7 @@ else
 {
     <h2 class="text-center">@ViewBag.userName's albums</h2>
 }
-
-
+<hr/>
 @if (ViewBag.userId == ViewBag.currentUserId)
 {
     <p class="text-center">
