--- a/Facebook/Views/Friends/ShowFriendRequests.cshtml
+++ b/Facebook/Views/Friends/ShowFriendRequests.cshtml
@@ -5,6 +5,9 @@
     ViewBag.Title = "Friend Request";
 }
 
+
+<h2 class="text-center">Your Friend Requests</h2>
+<hr/>
 @foreach (var profile in Model)
 {
     <div class="container wrap">
