--- a/Facebook/Views/Friends/ShowFriends.cshtml
+++ b/Facebook/Views/Friends/ShowFriends.cshtml
@@ -5,6 +5,8 @@
     ViewBag.Title = "ShowFriends";
 }
 
+<h2 class="text-center">Friends List</h2>
+<hr />
 @foreach (var profile in Model)
 {
     <div class="container wrap">
