--- a/Facebook/Views/Group/AddUserIndex.cshtml
+++ b/Facebook/Views/Group/AddUserIndex.cshtml
@@ -6,7 +6,7 @@
 
     ViewBag.Title = "AddUserIndex";
 }
-
+<h2 class="text-center">Add Friend To Groupchat</h2>
 @foreach (var profile in Model)
 {
     <div class="container wrap">
