--- a/Facebook/Views/Home/Index.cshtml
+++ b/Facebook/Views/Home/Index.cshtml
@@ -1,6 +1,14 @@
-﻿@{
+﻿
+<style>
+    .jumbotron {
+        background-color: #B7ADCF;
+    }
+</style>
+
+@{
     ViewBag.Title = "Home Page";
 }
+
 
 <div class="jumbotron">
     <h1>GroupBy</h1>
