--- a/Facebook/Content/templatemo-blue.css
+++ b/Facebook/Content/templatemo-blue.css
@@ -20,7 +20,7 @@ h2 {
 .accent {
   font-family: 'Proxima Bold';
   line-height: 14px;
-  color: #60A9F0;
+  color: #000;
 }
 
 .bold {
@@ -37,7 +37,7 @@ h2 {
 }
 
 .tm-title {
-	color: #66CCFF;
+    color: #fff;
 }
 
 .white {
@@ -63,8 +63,8 @@ header {
   min-height: 400px;
   overflow: hidden;
   position: relative;
-  padding-top: 160px;
-  padding-bottom: 140px;
+  padding-top: 70px;
+  padding-bottom: 70px;
 }
 header img {
   display: inline-block !important;
@@ -78,8 +78,8 @@ header h2 {
   padding-top: 40px;
 }
 header hr {
-  border-color: #3366CC;
-  width: 100px;
+    border-color: #B7ADCF;
+    width: 100px;
 }
 
 /* about section */
@@ -90,16 +90,18 @@ header hr {
 
 /* skills section */
 .skills {
-  background: #3366CC;
-  color: #f5f5f5;
+    background: #B7ADCF;
+    color: #000;
 }
 .skills .progress {
   border-radius: 0px;
   height: 4px;
 }
-.skills .progress .progress-bar-primary {
-  background: #204090;
-}
+
+    .skills .progress .progress-bar-primary {
+        background: #B7ADCF;
+    }
+
 .skills strong {
   display: inline-block;
   font-weight: normal;
@@ -108,8 +110,8 @@ header hr {
 
 /* education section */
 .education {
-  background: #3366CC;
-  color: #f5f5f5;
+    background: #B7ADCF;
+    color: #000;
 }
 .education .education-content {
   padding-bottom: 14px;
@@ -145,8 +147,8 @@ header hr {
 
 /* experience section */
 .experience {
-  background: #3366CC;
-  color: #f5f5f5;
+    background: #B7ADCF;
+    color: #000;
 }
 .experience .experience-content {
   padding-bottom: 14px;
@@ -159,13 +161,6 @@ header hr {
   padding-left: 20px;
 }
 
-/* footer section */
-footer {
-  color: #f9f9f9;
-  text-align: center;
-  padding-top: 140px;
-  padding-bottom: 100px;
-}
 
 /* social icon section */
 .social-icons {
@@ -176,21 +171,23 @@ footer {
   display: inline-block;
   list-style: none;
 }
-.social-icons li a {
-  background: #3366CC;
-  border-radius: 50%;
-  color: #fff;
-  text-decoration: none;
-  font-size: 18px;
-  width: 40px;
-  height: 40px;
-  line-height: 40px;
-  text-align: center;
-  transition: all 0.4s ease-in;
-  position: relative;
-  bottom: 10px;
-  top: 10px;
-}
+
+    .social-icons li a {
+        background: #B7ADCF;
+        border-radius: 50%;
+        color: #000;
+        text-decoration: none;
+        font-size: 18px;
+        width: 40px;
+        height: 40px;
+        line-height: 40px;
+        text-align: center;
+        transition: all 0.4s ease-in;
+        position: relative;
+        bottom: 10px;
+        top: 10px;
+    }
+
 .social-icons li a:hover {
   background: #202020;
   color: #fff;
