--- a/Facebook/Views/Group/Index.cshtml
+++ b/Facebook/Views/Group/Index.cshtml
@@ -5,13 +5,19 @@
     ViewBag.Title = "Index";
 }
 
-<h2>My Groups</h2>
-<div class="container mt-4">
-    @Html.ActionLink("New Group", "New", "Group", new { @id = ViewBag.groupsOwner }, new { @class = "btn btn-success" })
-</div>
+<h2 class="text-center">Chat Groups</h2>
+<hr />
+
+@if (ViewBag.currentUser == ViewBag.ownerUser)
+{
+    <p class="text-center">
+        @Html.ActionLink("New Group", "New", "Group", new { @id = ViewBag.groupsOwner }, new { @class = "btn btn-success" })
+    </p>
+}
+
 
 @foreach (var item in Model)
-{
+ {
     <div class="container wrap">
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-6 col-md-offset-3">
@@ -23,5 +29,5 @@
             </div>
         </div>
     </div>
-}
+        }
 
