--- a/Facebook/Views/Photo/Index.cshtml
+++ b/Facebook/Views/Photo/Index.cshtml
@@ -1,32 +1,45 @@
-﻿@model IEnumerable<Facebook.Models.Photo>
+﻿<style>
+    body {
+        background-color: #B7ADCF;
+    }
+</style>
+
+@model IEnumerable<Facebook.Models.Photo>
 
 @{
-	ViewBag.Title = "Photos";
-}
-@if (ViewBag.currentUser==ViewBag.ownerUser)
-{
-	<div class="container mt-4">
-		<div class="row text-center mt-2">
-			@Html.ActionLink("Add new photo", "New", "Photo", new { @id = ViewBag.albumId }, new { @class = "btn btn-success" })
-		</div>
-	</div>
+    ViewBag.Title = "Photos";
 }
 
+@if (ViewBag.userId == ViewBag.currentUserId)
+{
+    <h2 class="text-center">Your Photos</h2>
+}
+else
+{
+    <h2 class="text-center">@ViewBag.userName's photos</h2>
+}
+</hr>
+
+@if (ViewBag.currentUser == ViewBag.ownerUser)
+{
+    <p class="text-center">
+        @Html.ActionLink("Add new photo", "New", "Photo", new { @id = ViewBag.albumId }, new { @class = "btn btn-success" })
+    </p>
+
+}
+<br/>
+<br/>
 <div class="container">
 
-		<h1 class="font-weight-light text-center text-lg-left mt-4 mb-0">@ViewBag.albumName</h1>
-
-		<hr class="mt-2 mb-5">
-
-		<div class="row text-center text-lg-left">
-			@foreach (var item in Model)
-			{
-				<div class="col-lg-3 col-md-4 col-6">
-					<a href="@Url.Action("Show", "Photo", new { @id = item.photoID})" class="d-block mb-4 h-100">
-						<img class="img-fluid img-thumbnail" src="@item.photoURL" alt="">
-					</a>
-				</div>
-			}
-		</div>
+    <div class="row text-center text-lg-left">
+         @foreach (var item in Model)
+         {
+              <div class="col-lg-3 col-md-4 col-6">
+                   <a href="@Url.Action("Show", "Photo", new { @id = item.photoID})" class="d-block mb-4 h-100">
+                        <img class="img-fluid img-thumbnail" src="@item.photoURL" alt="">
+                   </a>
+              </div>
+          }
+    </div>
 
 </div>
