--- a/Facebook/Views/Photo/New.cshtml
+++ b/Facebook/Views/Photo/New.cshtml
@@ -1,35 +1,40 @@
 ﻿@model Facebook.Models.Photo
+@Styles.Render("~/Content/Group.css")
 
 @{
     ViewBag.Title = "New Photo";
 }
 
+<div class="font-robo">
+    <div class="wrapper wrapper--w680">
+        <div class="card card-1">
+            <div class="card-body">
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
 
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-<div class="form-horizontal">
-	<h4>Add new Photo</h4>
-	<hr />
-	@Html.HiddenFor(m => m.albumID)
-	@Html.ValidationSummary(true, "", new { @class = "text-danger" })
-	<div class="form-group">
-		@Html.LabelFor(model => model.photoURL, htmlAttributes: new { @class = "control-label col-md-2" })
-		<div class="col-md-10">
-			@Html.EditorFor(model => model.photoURL, new { htmlAttributes = new { @class = "form-control" } })
-			@Html.ValidationMessageFor(model => model.photoURL, "", new { @class = "text-danger" })
-		</div>
-	</div>
+                    <div class="form-horizontal">
+                        <h4>New Photo</h4>
+                        <hr />
+                        @Html.HiddenFor(m => m.albumID)
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.photoURL, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.photoURL, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.photoURL, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
 
-	<div class="form-group">
-		<div class="col-md-offset-2 col-md-10">
-			<input type="submit" value="Create" class="btn btn-default" />
-		</div>
-	</div>
-</div>
-}
+                        <div class="form-group">
+                            <div class="col-md-offset-2 col-md-10">
+                                <input type="submit" value="Create" class="btn btn-success" />
+                            </div>
+                        </div>
+                    </div>
+                }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
+            </div>
+        </div>
+    </div>
 </div>
