--- a/Facebook/Views/Profile/New.cshtml
+++ b/Facebook/Views/Profile/New.cshtml
@@ -6,72 +6,51 @@
     ViewBag.Title = "New";
 }
 
-@using (Html.BeginForm(actionName: "New", controllerName: "Profile"))
-{
+<div class="font-robo">
+    <div class="wrapper wrapper--w680">
+        <div class="card card-1">
+            <div class="card-body">
+                @using (Html.BeginForm(actionName: "New", controllerName: "Profile"))
+                {
 
-    @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+                    @Html.ValidationSummary(false, "", new { @class = "text-danger" })
 
-    @Html.HiddenFor(m => m.userId)
+                    @Html.HiddenFor(m => m.userId)
 
-    <div class="form-group">
-        @Html.Label("profileImageUrl", "Choose a profile picture")
-        @Html.TextBox("profileImageUrl", null, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.profileImageUrl, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        @Html.Label("profileImageUrl", "* Choose a profile picture")
+                        @Html.TextBox("profileImageUrl", null, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.profileImageUrl, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="form-group">
+                        @Html.Label("backgroundImageUrl", "* Choose a background photo")
+                        @Html.TextBox("backgroundImageUrl", null, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.backgroundImageUrl, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="form-group">
+                        @Html.Label("name", "* What's your name?")
+                        @Html.TextBox("name", null, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.name, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="form-group">
+                        @Html.Label("birthdate", "What's your birthdate?")
+                        @Html.TextArea("birthdate", null, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.about, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="form-group">
+                        @Html.Label("occupation", "What is your occupation?")
+                        @Html.TextArea("occupation", null, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.occupation, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="form-group">
+                        @Html.Label("job", "What is your work experience?")
+                        @Html.TextArea("job", null, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.job, "", new { @class = "text-danger" })
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                }
+            </div>
+        </div>
     </div>
-    <div class="form-group">
-        @Html.Label("backgroundImageUrl", "Choose a background photo")
-        @Html.TextBox("backgroundImageUrl", null, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.backgroundImageUrl, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.Label("name", "What's your name?")
-        @Html.TextBox("name", null, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.name, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.Label("about", "Tell us something about you")
-        @Html.TextArea("about", null, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.about, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.Label("occupation", "What is your occupation?")
-        @Html.TextArea("occupation", null, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.occupation, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.Label("studies", "What are your studies?")
-        @Html.TextArea("studies", null, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.studies, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.Label("languages", "What langueges do you know?")
-        @Html.TextArea("languages", null, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.languages, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.Label("job", "What is your work experience?")
-        @Html.TextArea("job", null, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.job, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.Label("address", "What is your address?")
-        @Html.TextArea("address", null, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.address, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.Label("phone", "What is your phone number?")
-        @Html.TextArea("phone", null, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.phone, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.Label("email", "What is your email address?")
-        @Html.TextArea("email", null, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.email, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.Label("web", "What is your website?")
-        @Html.TextArea("web", null, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.web, "", new { @class = "text-danger" })
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-}
+</div>
+
