--- a/Facebook/Views/Shared/_LoginPartial.cshtml
+++ b/Facebook/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,10 @@
-﻿@using Microsoft.AspNet.Identity
+﻿<style>
+    .nav > li > a{
+        color: black;
+    }
+</style>
+
+@using Microsoft.AspNet.Identity
 @if (Request.IsAuthenticated)
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
