fix for new profile

--- a/Facebook/Views/Profile/New.cshtml
+++ b/Facebook/Views/Profile/New.cshtml
@@ -33,8 +33,8 @@
                         @Html.ValidationMessageFor(m => m.name, "", new { @class = "text-danger" })
                     </div>
                     <div class="form-group">
-                        @Html.Label("birthdate", "What's your birthdate?")
-                        @Html.TextArea("birthdate", null, new { @class = "form-control" })
+                        @Html.Label("about", "Tell us something about you")
+                        @Html.TextArea("about", null, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.about, "", new { @class = "text-danger" })
                     </div>
                     <div class="form-group">
